--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 lzc-sdk-version: "0.1"
 name: MoonTV
-package: cloud.lazycat.app.moontv
-version: 0.0.1
+package: lazycat.coummunity.app.moontv
+version: 0.0.2
 description: 开箱即用的、跨平台的影视聚合播放器
 homepage: https://github.com/senshinya/MoonTV
 author: senshinya
@@ -11,8 +11,23 @@ application:
     multi_instance: false
     public_path:
         - /
-    routes:
-        - /=http://moontv:3000/
+    upstreams:
+        - location: /
+          backend: http://moontv:3000
+
 services:
     moontv:
-        image: registry.lazycat.cloud/czyt/senshinya/moontv:0d5920d59c794278
+        image: registry.lazycat.cloud/edward/senshinya/moontv:f3a9755b2dc8026f
+        environment:
+            - USERNAME={{ .U.admin_username }}
+            - PASSWORD={{.U.admin_password}}
+            - NEXT_PUBLIC_ENABLE_REGISTER={{.U.enable_register}}
+            - NEXT_PUBLIC_STORAGE_TYPE=redis
+            - REDIS_URL=redis://moontv-redis:6379
+        depends_on:
+            - moontv-redis
+
+    moontv-redis:
+        image: registry.lazycat.cloud/edward/library/redis:4c6b9d7b7a334a2e
+        binds:
+            - /lzcapp/var/redis:/data
