--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 lzc-sdk-version: "0.1"
 name: MoonTV
 package: lazycat.coummunity.app.moontv
-version: 0.0.2
+version: 2.0.1
 description: 开箱即用的、跨平台的影视聚合播放器
 homepage: https://github.com/senshinya/MoonTV
 author: senshinya
@@ -17,7 +17,8 @@ application:
 
 services:
     moontv:
-        image: registry.lazycat.cloud/edward/senshinya/moontv:f3a9755b2dc8026f
+        # ghcr.io/moontechlab/lunatv
+        image: registry.lazycat.cloud/czyt/moontechlab/lunatv:c6e9ffeeeb52ead6
         environment:
             - USERNAME={{ .U.admin_username }}
             - PASSWORD={{.U.admin_password}}
