--- a/manifest.yml
+++ b/manifest.yml
@@ -1,14 +1,13 @@
-lzc-sdk-version: "0.1"
 name: MoonTV
 package: lazycat.coummunity.app.moontv
 version: 2.0.1
+min_os_version: 1.3.8
 description: 开箱即用的、跨平台的影视聚合播放器
-homepage: https://github.com/senshinya/MoonTV
-author: senshinya
+homepage: https://github.com/MoonTechLab/LunaTV
+author: MoonTechLab
 application:
     subdomain: moontv
-    background_task: false
-    multi_instance: false
+
     public_path:
         - /
     upstreams:
