--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 name: MoonTV
 package: lazycat.coummunity.app.moontv
-version: 2.0.1
+version: 2.1.0
 min_os_version: 1.3.8
 description: 开箱即用的、跨平台的影视聚合播放器
 homepage: https://github.com/MoonTechLab/LunaTV
@@ -16,8 +16,8 @@ application:
 
 services:
     moontv:
-        # ghcr.io/moontechlab/lunatv
-        image: registry.lazycat.cloud/czyt/moontechlab/lunatv:c6e9ffeeeb52ead6
+        # ghcr.io/moontechlab/lunatv:2.1.0
+        image: registry.lazycat.cloud/czyt/moontechlab/lunatv:09d31a3919ee8776
         environment:
             - USERNAME={{ .U.admin_username }}
             - PASSWORD={{.U.admin_password}}
