--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 name: MoonTV
 package: lazycat.coummunity.app.moontv
-version: 2.7.1
+version: 3.0.2
 min_os_version: 1.3.8
 description: 开箱即用的、跨平台的影视聚合播放器
 homepage: https://github.com/MoonTechLab/LunaTV
@@ -17,13 +17,14 @@ application:
 services:
     moontv:
         # ghcr.io/moontechlab/lunatv:2.7.1
-        image: xget.xi-xu.me/cr/ghcr/moontechlab/lunatv:2.7.1
+        image: xget.xi-xu.me/cr/ghcr/moontechlab/lunatv:3.0.2
         environment:
             - USERNAME={{ .U.admin_username }}
             - PASSWORD={{.U.admin_password}}
             - NEXT_PUBLIC_ENABLE_REGISTER={{.U.enable_register}}
             - NEXT_PUBLIC_STORAGE_TYPE=redis
             - REDIS_URL=redis://moontv-redis:6379
+            - AUTH_TOKEN={{.U.auth_token}}
         depends_on:
             - moontv-redis
 
